fix quick jump on the latest candle

--- a/public/tradingview-chart.css
+++ b/public/tradingview-chart.css
@@ -40,7 +40,7 @@ html.theme-dark .menuWrap-g78rwseC {
 html.theme-dark .button-2Vpz_LXc.isInteractive-2Vpz_LXc.isGrouped-2Vpz_LXc {
   height: 26px;
   border-radius: 4px;
-  margin: 0 3px;
+  margin: 0 1px;
 }
 
 html.theme-dark .button-2Vpz_LXc.isInteractive-2Vpz_LXc.isGrouped-2Vpz_LXc .value-2y-wa9jT {
